force-app/main/default/objects/Account_Portfolio_Error_Log_Event__e/Account_Portfolio_Error_Log_Event__e.object-meta.xml
<CustomObject>
    <description>Created to insert Error logs for Account portfolio Assignment Batch</description>
    <label>Account Portfolio Error Log Event</label>
    <pluralLabel>Account Portfolio Error Log Events</pluralLabel>
</CustomObject>