force-app/main/default/objects/Account_Portfolio_Error_Log_Event__e/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <label>ApexClass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>