force-app/main/default/objects/Account_Portfolio_Error_Log_Event__e/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>