force-app/main/default/objects/Account_Portfolio_Error_Log_Event__e/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>